--- a/catalogo.html
+++ b/catalogo.html
@@ -184,6 +184,8 @@
       data-product-time="Até 2 dias após a confirmação do pedido">
   
       <img class="produtos__cartao__img" src="./images/produtos-catalogo/FE-00000028/img1.png" alt="Foto da caixa Mãe">
+      <img class="produtos__cartao__img-hovered" src="./images/produtos-catalogo/FE-00000028/img2.png" loading="lazy" alt="Foto da caixa Mãe">
+
       <div class="info">
         <h3>Caixa "Mãe"</h3>
         <span class="info__preco">
@@ -212,6 +214,8 @@
       data-product-other="Produto envernizado para proteger em caso de contato com líquidos">
   
       <img class="produtos__cartao__img" src="./images/produtos-catalogo/FE-00000029/img1.png" alt="Foto dos porta-copos Dia das Mães">
+      <img class="produtos__cartao__img-hovered" src="./images/produtos-catalogo/FE-00000029/img2.png" alt="Foto dos porta-copos Dia das Mães">
+
       <div class="info">
         <h3>Porta-copos Dia das Mães</h3>
         <span class="info__preco">
@@ -242,6 +246,7 @@
       data-product-options="Argola dourada ou prateada">
   
       <img class="produtos__cartao__img" src="./images/produtos-catalogo/FE-00000016/img1.png" alt="Foto dos chaveiros Dia das Mães">
+
       <div class="info">
         <h3>Chaveiros Dia das Mães</h3>
         <span class="info__preco">
@@ -269,6 +274,8 @@
       data-product-time="Até 2 dias após a confirmação do pedido">
   
       <img class="produtos__cartao__img" src="./images/produtos-catalogo/FE-00000013/img1.png" alt="Foto do porta-retrato gravação a laser 10x15cm">
+      <img class="produtos__cartao__img-hovered" src="./images/produtos-catalogo/FE-00000013/img2.png" alt="Foto do porta-retrato gravação a laser 10x15cm">
+
       <div class="info">
         <h3>Porta-retrato gravação a laser 10x15cm</h3>
         <span class="info__preco">
@@ -296,6 +303,8 @@
       data-product-options="Gravação da frase no topo">
   
       <img class="produtos__cartao__img" src="./images/produtos-catalogo/FE-00000049/img1.png" alt="Foto dos Porta-joias 3 gavetas gravação personalizadas">
+      <img class="produtos__cartao__img-hovered" src="./images/produtos-catalogo/FE-00000049/img4.png" alt="Foto dos Porta-joias 3 gavetas gravação personalizadas">
+
       <div class="info">
         <h3>Porta-joias 3 gavetas gravação personalizadas</h3>
         <span class="info__preco">
@@ -323,6 +332,8 @@
       data-product-options="MDF cru ou branco e cor dos versículos">
   
       <img class="produtos__cartao__img" src="./images/produtos-catalogo/FE-00000052/img1.png" alt="Foto dos Caixinha de bênçãos">
+      <img class="produtos__cartao__img-hovered" src="./images/produtos-catalogo/FE-00000052/img2.png" alt="Foto dos Caixinha de bênçãos">
+
       <div class="info">
         <h3>Caixinha de bênçãos</h3>
         <span class="info__preco">
