--- a/galeria-exclusivos.html
+++ b/galeria-exclusivos.html
@@ -110,6 +110,7 @@
 					data-product-code="GE-00000004">
 			
 					<img class="produtos__cartao__img" src="./images/galeria-exclusivos/GE-00000004/img1.png" alt="Foto do Porta-retrato de coroa">
+					<img class="produtos__cartao__img-hovered" src="./images/galeria-exclusivos/GE-00000004/img4.png" alt="Foto do Porta-retrato de coroa">
 				</div>
 				
 				<div class="produtos__cartao produtos__cartao--exclusivos" loading="lazy"
